migrate to fqcn

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@ galaxy_info:
   description: Install Nano editor with Improved Nano Syntax Highlighting Files.
   issue_tracker_url: https://github.com/spirkaa/ansible-role-nano/issues
   license: MIT
-  min_ansible_version: 2.9
+  min_ansible_version: "2.10"
   platforms:
     - name: EL
       versions:
